muevo heavy_files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     environment:
       - DATABASE_URL=postgres://myuser:mypass@db/mydb
     volumes:
-      - .:/app
+      #- .:/app
+      - ./heavy_files:/app/heavy_files
 
   db:
     image: postgres:13
